added parallelized regex walkdir, working on asynchronous command execution

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -36,6 +36,8 @@ Respect 'LS_COLORS' environment variable when coloring the output
 Search for files using a regular expressions instead of a glob. Only applies to
 subcommands that take a pattern as a positional argument.
 .HP
+\fB\-v\fR, \fB\-\-verbose\fR
+.HP
 \fB\-V\fR, \fB\-\-version\fR
 .IP
 Prints version information
