Added option to edit tags in `$EDITOR` with new subcommand `view` * So far this, only shows files that are already tagged * Works both globally and locally * Will have an option to show all files in directory very soon * Restructured the entire project because `app.rs` was getting long

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -133,6 +133,10 @@ cp
 .IP
 Copies tags from the specified file to files that match a pattern
 .IP
+view
+.IP
+View the results in an editor (optional pattern)
+.IP
 edit
 .IP
 Edits a tag's color
