working towards building a UI

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -48,6 +48,10 @@ directories or directories specified with '\-d|\-\-dir'. Only applies to 'search
 \fB\-l\fR, \fB\-\-ls\-colors\fR
 .IP
 Respect 'LS_COLORS' environment variable when coloring the output
+.HP
+\fB\-u\fR, \fB\-\-ui\fR
+.IP
+Open a TUI to manage tags, requires results from a `search`, or `list`
 .SS "OPTIONS:"
 .HP
 \fB\-d\fR, \fB\-\-dir\fR <DIR>...
