* Encryption is an option in the configuration file * Partially working on 'info' subcommand * Registry is now a yaml file. Works better with encryption

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -143,6 +143,10 @@ edit
 .IP
 Edits a tag's color
 .IP
+info
+.IP
+Display information about the wutag environment
+.IP
 clean\-cache
 .IP
 Clean the cached tag registry
