chore: custom regex, iregex, glob, iglob have been implemented for SQLITE

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -114,6 +114,10 @@ Print help information
 Print version information
 .SS "SUBCOMMANDS:"
 .IP
+testing
+.IP
+Testing new subcommands
+.IP
 list
 .IP
 Lists all available tags or files
