fix: updated all clippy lints to 1.60 nightly

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -133,11 +133,11 @@ list
 .IP
 Lists all available tags or files
 .IP
-list2
-.IP
-Lists all available tags or files
-.IP
 set
+.IP
+Set tag(s) on files that match the given pattern
+.IP
+set2
 .IP
 Set tag(s) on files that match the given pattern
 .IP
