delete(implication): remove implication from codebase, rm tag is finished

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -141,10 +141,6 @@ Print help information
 Print version information
 .SS "SUBCOMMANDS:"
 .IP
-testing
-.IP
-Testing new subcommands
-.IP
 init
 .IP
 Initialize the database
@@ -155,7 +151,7 @@ Lists all available tags or files
 .IP
 set
 .IP
-Set tag(s) on files that match the given pattern
+Set tag(s) and/or value(s) on results from a patterned query
 .IP
 rm
 .IP
