update(rm): progress on removing value, now updates value_id instead of skipping

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -4,7 +4,6 @@
 wutag \- tag files colorfully
 .SH DESCRIPTION
 wutag 0.7.1
-Wojciech K??pka <Wwojciech@wkepka.dev>
 Lucas Burns   <lmb@lmburns.com>
 DESCRIPTION: Tag files and manage them with color
 .SS "USAGE:"
@@ -141,10 +140,6 @@ Print help information
 Print version information
 .SS "SUBCOMMANDS:"
 .IP
-init
-.IP
-Initialize the database
-.IP
 list
 .IP
 Lists all available tags or files
@@ -197,5 +192,4 @@ print\-completions
 .IP
 Prints completions for the specified shell to dir or stdout
 .PP
-See wutag \-\-help for longer explanations of some base options.
-Use \-\-help after a subcommand for explanations of more options.
+See wutag \-\-help for longer explanations of subcommands and their options
