update(dependencies): also --global rm is finished

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -32,11 +32,16 @@ Specify a different registry to use
 .HP
 \fB\-i\fR, \fB\-\-case\-insensitive\fR
 .IP
-Turn the glob into a case insensitive one (default: case insensitive). Overrides \fB\-\-casesensitive\fR, and becomes case\-sensitive if a search is performed with an uppercasecharacter. Only applies to subcommands that take a pattern as a positional argument.
+Turn the glob into a case insensitive one (default: case insensitive). Overrides
+\fB\-\-case\-sensitive\fR, and becomes case\-sensitive if a search is performed with an
+uppercase\-character. Only applies to subcommands that take a pattern as a positional
+argument.
 .HP
 \fB\-s\fR, \fB\-\-case\-sensitive\fR
 .IP
-Turn the glob into a case sensitive one (default: case sensitive). Overrides \fB\-\-caseinsensitive\fR. Only applies to subcommands that take a pattern as a positional argument.
+Turn the glob into a case sensitive one (default: case sensitive). Overrides
+\fB\-\-case\-insensitive\fR. Only applies to subcommands that take a pattern as a positional
+argument.
 .HP
 \fB\-r\fR, \fB\-\-regex\fR
 .IP
