* `list` now has --relative * `info` now prints files without xattr * More of the code uses `fail!` macro

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -76,10 +76,7 @@ Respect 'LS_COLORS' environment variable when coloring the output
 .HP
 \fB\-c\fR, \fB\-\-color\fR <when>
 .IP
-When to colorize output (usually meant for piping). Valid values are: always, auto,
-never. The always selection only applies to the path as of now.
-.IP
-[possible values: never, auto, always]
+When to colorize output. Valid values are: always, auto, never
 .HP
 \fB\-t\fR, \fB\-\-type\fR <filetype>
 .IP
