update: make --global global; remove extra follow_symlinks on subcommands

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -68,7 +68,7 @@ directories or directories specified with '\-d|\-\-dir'. Only applies to 'search
 .IP
 Peform the action (set, remove, modify) on the dereferenced file. This option can also
 be set in the configuration file. Overrides configuration and this option can be
-overriden with '\-\-no\-follow'
+overridden with '\-\-no\-follow'
 .HP
 \fB\-l\fR, \fB\-\-ls\-colors\fR
 .IP
