sub(clean_cache): should be finished; edit is nearing completion

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -193,6 +193,10 @@ repair
 .IP
 Repair broken/missing/modified files in the registry
 .IP
+merge
+.IP
+Merge tags or values onto resulting query
+.IP
 clean\-cache
 .IP
 Clean the cached tag registry
