committing before refactoring set

--- a/man/wutag.1
+++ b/man/wutag.1
@@ -8,7 +8,7 @@ Lucas Burns   <lmb@lmburns.com>
 DESCRIPTION: Tag files and manage them with color
 .SS "USAGE:"
 .IP
-wutag [FLAGS/OPTIONS] <SUBCOMMAND> [TAGS/FLAGS]
+wutag [OPTIONS] <SUBCOMMAND> [OPTIONS]
 .SS "OPTIONS:"
 .HP
 \fB\-v\fR, \fB\-\-verbose\fR
@@ -204,6 +204,10 @@ Clean the cached tag registry
 ui
 .IP
 Open a TUI to manage tags
+.IP
+xattr
+.IP
+Testing
 .IP
 print\-completions
 .IP
